@@ -58,6 +58,9 @@ This release adds a translation of some of the user documentation into Spanish.
     * ``bzr merge --lca`` should handle when two revisions have no common
       ancestor other than NULL_REVISION. (John Arbash Meinel, #235715)
 
+    * ``bzr status`` was breaking if you merged the same revision 2x.
+      (John Arbash Meinel, #235407)
+
     * ``bzr push`` with both ``--overwrite`` and ``-r NNN`` options no longer
       fails.  (Andrew Bennetts, #234229)
       
